# keeperfx

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEPLOYMENT.md  KeeperFx.sh  Makefile  build-arm64.bat  build-portmaster.bat  build_portmaster_docker.sh  collect_all_libs.sh  dockerfile.eoan  keeperfx_debug.sh  keeperfx_launcher.sh  linux.mk  sync-and-build.ps1  wii.mk
.github/workflows/: build-release-patch-unsigned.yml
assets/linux/: install-deps.sh  launch.sh
scripts/: portmaster_build.sh
src/: ariadne_navitree.h  ariadne_tringls.h  bflib_basics.c  bflib_basics.h  bflib_crash.c  bflib_datetm.cpp  bflib_dernc.c  bflib_dernc.h  bflib_dialog.c  bflib_fmvids.cpp  bflib_input_joyst.cpp  bflib_inputctrl.cpp  bflib_keybrd.c  bflib_mouse.cpp  bflib_network.cpp  bflib_network_exchange.cpp  bflib_render.c  bflib_render.h  bflib_render_gpoly.c  bflib_render_trig.c  bflib_sndlib.cpp  bflib_sndlib.h  bflib_sound.c  bflib_tcpsp.c  bflib_video.c  bflib_video.h  bflib_vidsurface.c  cdrom.cpp  config.c  config_crtrmodel.c  config_effects.c  config_effects.h  config_keeperfx.c  config_magic.h  config_mods.c  config_objects.h  config_terrain.h  config_trapdoor.c  config_trapdoor.h  creature_control.h  (+137 more)
src/kfx/lense/: LensManager.cpp  LuaLensEffect.h
